# transcript-batch-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/transcript_batch_kit/: cli.py
src/transcript_batch_kit/src/transcript_batch_kit/: __init__.py  core.py
tests/tests/: test_core.py
